correction gap 12px in separation icon -> txt --- butons

--- a/styles.css
+++ b/styles.css
@@ -193,6 +193,7 @@ body {
   text-decoration: none; 
   border-radius: 100px;
   cursor: pointer;
+  gap: 12px;
 }
 
 .brands {
@@ -525,7 +526,7 @@ body {
   display: inline-flex;
   height: 44px;
   align-items: center;
-  gap: 0.75rem;
+  gap: 12px;
   padding: 1rem 2rem;
   font-size: 1.125rem;
 }
